--- a/src/styles/layouts/_contact-page.scss
+++ b/src/styles/layouts/_contact-page.scss
@@ -27,7 +27,7 @@
       line-height: $line-height-4xl;
       text-align: $text-align-center;
       font-family: $font-headings;
-      margin-bottom: 0;
+      margin-block: 24px 0;
     }
 
     &-details {
